<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r3mini</name>
  <version>0.0.0</version>
  <description>Meta package for r3mini.</description>
  <maintainer email="kucira00@gmail.com">Dr.K</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>r3mini_bringup</depend>
  <depend>r3mini_cartographer</depend>
  <depend>r3mini_description</depend>
  <depend>r3mini_navigation</depend>
  <depend>r3mini_robot</depend>
  <depend>r3mini_teleop</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
